name:                pwcrypt
version:             0.1.0.0
synopsis:            Passphrase protected ciphertexts
description:         Command-line file encryption utility ala scrypt
category:            Crypto
license:             MIT
license-file:        LICENSE
author:              joachifm
maintainer:          joachifm@fastmail.fm
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

executable pwcrypt
  main-is:             pwcrypt.hs
  other-modules:
    Crypto
  -- other-modules:
  other-extensions:    OverloadedStrings, BangPatterns
  extra-libraries:     ncursesw
  build-depends:
                -- Platform dependencies
                base >=4.7 && <4.8,
                bytestring >=0.10 && <0.11,
                transformers >=0.3 && <0.4,

                -- Libraries
                base64-bytestring >=1.0 && <1.1,
                byteable >=0.1 && <0.2,
                cereal >=0.4 && <0.5,
                cipher-aes >=0.2 && <0.3,
                cryptohash >=0.11 && <0.12,
                haskeline >= 0.7.1 && <1,
                optparse-applicative,
                pbkdf >=1.1 && <1.2

  hs-source-dirs:      src
  default-language:    Haskell2010
